--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,3 +9,13 @@ h2 {
   display: flex;
   gap: 10px;
 }
+
+.loading{
+  display: flex;
+  justify-content: center;
+}
+
+.no-movies{
+  color:red;
+  font-weight: bold;
+}
