--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -7,20 +7,28 @@
 }
 
 @else {
+  <button (click)="addMovie()">Add a movie</button>
   @for(movie of movies; track $index) {
   <div class ="movies-container">
     <div>
-      <img [ngSrc]="movie.poster" [priority]="$index === 0" width="169" height="250" />
+      @if(movie.poster) {
+        <img [ngSrc]="movie.poster" [priority]="$index === 0" width="169" height="250" />
+      } @else {
+        <img src="assets/image_placeholder.jpg" width="169" height="250" />
+      }
     </div>
     <div>
       <div>
-    {{$index + 1}}) Movie: <b>{{movie.title | uppercase}}</b>
+    {{$index + 1}} Movie: <b>{{movie.title | uppercase}}</b>
     </div>
     <div>
       Release Date: {{movie.releaseDate | date:"MMMM-dd-yyyy" | uppercase}}
     </div>
     <div>
       Price: {{movie.price | currency}}
+    </div>
+    <div>
+      <button (click)="removeMovie(movie)">Remove</button>
     </div>
     </div>
 
