Creating components for the website.

--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,39 +1,32 @@
-@if(!movies){
-  <div class="loading"><img src="assets/loading_icon.gif"/></div>
-}
+<app-generic-list [elements]="movies">
+  <ng-container content>
+    <button (click)="addMovie()">Add a movie</button>
+    @for(movie of movies; track $index) {
+      <div class ="movies-container">
+        <div>
+          @if(movie.poster) {
+            <img [ngSrc]="movie.poster" [priority]="$index === 0" width="169" height="250" />
+          } @else {
+            <img src="assets/image_placeholder.jpg" width="169" height="250" />
+          }
+        </div>
+        <div>
+          <div>
+        {{$index + 1}} Movie: <b>{{movie.title | uppercase}}</b>
+        </div>
+        <div>
+          Release Date: {{movie.releaseDate | date:"MMMM-dd-yyyy" | uppercase}}
+        </div>
+        <div>
+          Price: {{movie.price | currency}}
+        </div>
+        <div>
+          <button (click)="removeMovie(movie)">Remove</button>
+        </div>
+        </div>
 
-@else if(movies.length === 0) {
-  <div class="no-movies">No movies found</div>
-}
-
-@else {
-  <button (click)="addMovie()">Add a movie</button>
-  @for(movie of movies; track $index) {
-  <div class ="movies-container">
-    <div>
-      @if(movie.poster) {
-        <img [ngSrc]="movie.poster" [priority]="$index === 0" width="169" height="250" />
-      } @else {
-        <img src="assets/image_placeholder.jpg" width="169" height="250" />
-      }
-    </div>
-    <div>
-      <div>
-    {{$index + 1}} Movie: <b>{{movie.title | uppercase}}</b>
-    </div>
-    <div>
-      Release Date: {{movie.releaseDate | date:"MMMM-dd-yyyy" | uppercase}}
-    </div>
-    <div>
-      Price: {{movie.price | currency}}
-    </div>
-    <div>
-      <button (click)="removeMovie(movie)">Remove</button>
-    </div>
-    </div>
-
-  </div>
-  }
-}
-
+      </div>
+    }
+  </ng-container>
+</app-generic-list>
 
