Adding the 'stars' rating.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-menu></app-menu>
 
+<app-rating [maxRating]="5"></app-rating>
+
 <h2>Upcoming Releases</h2>
 
 <app-movies-list [movies]="upcomingReleasesMovies"></app-movies-list>
