--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 body {
   height: fit-content;
 }
+
+h2 {
+  color: rebeccapurple;
+}
