--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,14 @@
 <app-menu></app-menu>
 
-<button mat-flat-button class="primary">Primary</button>
+<!-- <button mat-flat-button class="primary">Primary</button>
 <button mat-flat-button class="secondary">Secondary</button>
-<button mat-flat-button class="warn">Warning</button>
+<button mat-flat-button class="warn">Warning</button> -->
 
 <!-- <app-rating [maxRating]="5" (rated)="processRating($event)"></app-rating> -->
 
 <div class="container">
-<h2>Upcoming Releases</h2>
-
-<app-movies-list [movies]="upcomingReleasesMovies"></app-movies-list>
-
-<h2>In Theaters</h2>
-
-<app-movies-list [movies]="inTheatersMovies"></app-movies-list>
+  
+<router-outlet></router-outlet>
 
 </div>
 
