--- a/src/app/movies/movies-list/movies-list.component.css
+++ b/src/app/movies/movies-list/movies-list.component.css
@@ -1,13 +1,18 @@
-h2 {
-  color: rgb(0, 102, 255);
+.movies-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  align-items: center;
 }
 
-.movies-container{
-  border: 1px solid black;
-  margin-bottom: 10px;
-  padding: 10px;
-  display: flex;
-  gap: 10px;
+.movie-container{
+  text-align: center;
+}
+
+p {
+  max-width: 225px;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 .loading{
@@ -18,4 +23,8 @@ h2 {
 .no-movies{
   color:red;
   font-weight: bold;
+}
+
+button {
+  margin-left: 1rem;
 }
