--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,35 +1,38 @@
 <app-generic-list [elements]="movies">
   <ng-container content>
-    <button mat-flat-button (click)="addMovie()">
+    <!-- <button mat-flat-button (click)="addMovie()">
       <mat-icon>add</mat-icon>
       Add Movie
-    </button>
-    @for(movie of movies; track $index) {
-      <div class ="movies-container">
-        <div>
-          @if(movie.poster) {
-            <img [ngSrc]="movie.poster" [priority]="$index === 0" width="169" height="250" />
-          } @else {
-            <img src="assets/image_placeholder.jpg" width="169" height="250" />
-          }
-        </div>
-        <div>
-          <div>
-        <h2>{{$index + 1}}) Movie: <b>{{movie.title | uppercase}}</b></h2>
-        </div>
-        <div>
-          Release Date: {{movie.releaseDate | date:"MMMM-dd-yyyy" | uppercase}}
-        </div>
-        <div>
-          Price: {{movie.price | currency}}
-        </div>
-        <div>
-          <button (click)="removeMovie(movie)">Remove</button>
-        </div>
-        </div>
+    </button> -->
 
-      </div>
-    }
+    <div class="movies-container">
+      @for(movie of movies; track $index) {
+        <div class="movie-container">
+          <a>
+            @if (movie.poster){
+            <img [ngSrc]="movie.poster" width="169" height="250" alt="{{movie.title}} poster">
+            } @else {
+              <img src="assets/image_placeholder.jpg" width="169" height="250" alt="No poster available">
+            }
+          </a>
+          <p>
+            <a>{{movie.title}}</a>
+          </p>
+
+          <div>
+            <a mat-flat-button>
+              Edit
+            </a>
+
+            <button mat-flat-button class="warn" (click)="removeMovie(movie.id)">
+              Delete
+            </button>
+          </div>
+        </div>
+      }
+
+    </div>
+
   </ng-container>
 </app-generic-list>
 
