--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,7 +1,11 @@
 <mat-toolbar class="fixed-top">
   <span>
-    <a mat-button>
+    <a mat-button routerLink="">
       <mat-icon>local_movies</mat-icon> Angular Movies
     </a>
   </span>
+
+  <div>
+    <a mat-button routerLink="genres">Genres</a>
+  </div>
 </mat-toolbar>
