--- a/src/app/genres/create-genre/create-genre.component.css
+++ b/src/app/genres/create-genre/create-genre.component.css
@@ -1,3 +1,12 @@
 button {
   margin-right: 1rem;
 }
+
+.buttons-container {
+  margin-top: 1rem;
+}
+
+mat-form-field {
+  width: 100%;
+  max-width: 500px;
+}
